[package]
name = "solana-summer-transfer-hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_summer_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
# TLV account resolution: `ExtraAccountMeta`, `Seed` and `ExtraAccountMetaList`.
# `init_extra_account_meta.rs` uses these to declare and serialize the extra
# accounts Token-2022 must pass to the hook (here, the rate_limit PDA) so the
# client can resolve them automatically at transfer time.
spl-tlv-account-resolution = "0.11.1"
# Provides the `SplDiscriminate` trait, which yields
# `ExecuteInstruction::SPL_DISCRIMINATOR_SLICE` — the 8-byte discriminator
# Token-2022 uses to dispatch into our `transfer_hook` instruction (see lib.rs).
spl-discriminator = "0.5.2"
# The standard transfer-hook interface. `ExecuteInstruction` is the interface
# type used to tag the `transfer_hook` instruction and to bind the
# `ExtraAccountMetaList` to the Execute call (`ExtraAccountMetaList::init::
# <ExecuteInstruction>`), keeping this program interoperable with Token-2022.
spl-transfer-hook-interface = "2.1.0"


[dev-dependencies]
litesvm = "0.13.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "4.1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
